--- a/src/main/webapp/administrador/palestra.xhtml
+++ b/src/main/webapp/administrador/palestra.xhtml
@@ -76,7 +76,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCasais.png" /><a
-								href="montagemEncontristas.xhtml">Encontristas</a>
+								href="../dirigente/montagemEncontrista.xhtml">Encontristas</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
