Montagem dos Círculos

--- a/src/main/webapp/administrador/menuAdministrador.xhtml
+++ b/src/main/webapp/administrador/menuAdministrador.xhtml
@@ -95,7 +95,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCirculos.png" /><a
-								href="montagemCirculos.xhtml">Círculos</a></li>
+								href="../dirigente/montagemCirculo.xhtml">Círculos</a></li>
 
 					</ul>
 				</li>
