--- a/src/main/webapp/dirigente/montagemEncontrista.xhtml
+++ b/src/main/webapp/dirigente/montagemEncontrista.xhtml
@@ -19,7 +19,6 @@
 	<h:outputStylesheet library="css" name="AdminLTE.css" />
 	<h:outputStylesheet library="css" name="font-awesome.min.css" />
 </h:head>
-
 <h:body style="background-color:#EBF3FE">
 	<h:form id="listagemEncontristasEcc">
 		<div id="menubar">
@@ -97,7 +96,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCirculos.png" />
-							<a href="montagemCirculos.xhtml">Círculos</a></li>
+							<a href="../dirigente/montagemCirculo.xhtml">Círculos</a></li>
 
 					</ul>
 				</li>
@@ -127,7 +126,7 @@
 		<br />
 		<p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()" />
 		<f:metadata>
-			<f:viewAction action="#{encontristaEccBean.removeCasaisLimbo()}" />
+			<f:viewAction action="#{circuloEccBean.removeCasaisLimbo()}" />
 		</f:metadata>
 		<p:growl id="growl" showDetail="false" life="4000" autoUpdate="true" />
 		<br />
