Regra excluir encontrista do ECC remove do círculo, não permite remover a lista toda de encontristas do ECC

--- a/src/main/webapp/dirigente/montagemEncontrista.xhtml
+++ b/src/main/webapp/dirigente/montagemEncontrista.xhtml
@@ -177,7 +177,7 @@
 					</p:column>
 				</p:dataTable>
 		<!-- ======================================================================= -->
-		<!-- Caixa de diálogo para confirmar exclusão da Equipe				         -->
+		<!-- Caixa de diálogo para confirmar exclusão dos Encontristas		         -->
 		<!-- ======================================================================= -->
 		<p:confirmDialog header="Excluir Equipe"
 						 message="Confirmar a exclusão dos Encontristas do ECC #{encontristaEccBean.encontristaEcc.ecc.numero}?"
