--- a/src/main/webapp/dirigente/montagemEquipe.xhtml
+++ b/src/main/webapp/dirigente/montagemEquipe.xhtml
@@ -389,7 +389,7 @@
 										 style="width:435px" converter="fichaConverter"
 										 filter="true" filterMatchMode="contains">
 							<f:selectItem itemLabel="Selecione o casal" noSelectionOption="true" />
-							<f:selectItems value="#{fichaBean.listaEncontristas}"
+							<f:selectItems value="#{fichaBean.listaEncontreiros}"
 										   var="casal" itemValue="#{casal}"
 										   itemLabel="#{casal.primeiraEtapa} - #{casal.nomeUsual}" />
 							<p:ajax event="change" update="fotoCasalEleEla" process="@this" listener="#{equipeEccBean.onChangeCasalCoordenador}"/>
