--- a/src/main/webapp/dirigente/montagemPalestrante.xhtml
+++ b/src/main/webapp/dirigente/montagemPalestrante.xhtml
@@ -171,7 +171,7 @@
 						<p:outputLabel value="#{palestrante.palestrante}"/>
 					</p:column>
 					<p:column headerText="Palestrante" width="350" rendered="#{palestrante.palestra.casal}">
-						<p:outputLabel value="#{palestrante.ficha.nomeUsual}"/>
+						<p:outputLabel value="#{palestrante.ficha.primeiraEtapa} - #{palestrante.ficha.nomeUsual}"/>
 						<h:graphicImage library="imagens" value="/image?imagem=#{palestrante.ficha.fotoEla}" rendered="#{palestrante.ficha.fotoEla.length() > 0}"
 										style="width:20px; height:20px; float: right;" title="Foto dela"/>
 						<h:graphicImage library="imagens" value="/image?imagem=#{palestrante.ficha.fotoEle}" rendered="#{palestrante.ficha.fotoEle.length() > 0}"
@@ -252,9 +252,9 @@
 											 style="width:440px" converter="fichaConverter"
 											 filter="true" filterMatchMode="contains">
 								<f:selectItem itemLabel="Selecione o casal" noSelectionOption="true" />
-								<f:selectItems value="#{fichaBean.listaEncontristas}"
+								<f:selectItems value="#{fichaBean.listaEncontreiros}"
 											   var="casal" itemValue="#{casal}"
-											   itemLabel="#{casal.nomeUsual}" />
+											   itemLabel="#{casal.primeiraEtapa} - #{casal.nomeUsual}" />
 							</p:selectOneMenu>
 						</h:panelGrid>
 						<h:panelGrid columns="2">
@@ -320,9 +320,9 @@
 											 style="width:440px" converter="fichaConverter"
 											 filter="true" filterMatchMode="contains">
 								<f:selectItem itemLabel="Selecione o casal" noSelectionOption="true" />
-								<f:selectItems value="#{fichaBean.listaEncontristas}"
+								<f:selectItems value="#{fichaBean.listaEncontreiros}"
 											   var="casal" itemValue="#{casal}"
-											   itemLabel="#{casal.nomeUsual}" />
+											   itemLabel="#{casal.primeiraEtapa} - #{casal.nomeUsual}" />
 							</p:selectOneMenu>
 						</h:panelGrid>
 						<h:panelGrid columns="2">
