--- a/src/main/webapp/administrador/circulo.xhtml
+++ b/src/main/webapp/administrador/circulo.xhtml
@@ -24,6 +24,10 @@
 		<div id="menubar">
 			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="400" height="72" /></li>
 			<ul>
+				<li><a href="../publico/estatistica.xhtml">
+					<h:graphicImage library="imagens/menu"
+									style="width:35px; height:35px;" name="estatisticas.png" />Indicadores
+				</a></li>
 				<li><a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="cadastros.png" />Cadastros</a>
 					<ul>
