--- a/src/main/webapp/dirigente/menuDirigente.xhtml
+++ b/src/main/webapp/dirigente/menuDirigente.xhtml
@@ -34,36 +34,11 @@
 		<div id="menubar">
 			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="400" height="72" /></li>
 			<ul>
-				<!--
-				<li><a><h:graphicImage library="imagens/menu"
-							style="width:35px; height:35px;" name="cadastros.png" />Cadastros</a>
-					<ul>
-						<li><h:graphicImage library="imagens/menu"
-								style="width:30px; height:30px; 
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="circulos.png" /><a href="../administrador/circulo.xhtml">Circulos
-						</a></li>
-						<li><h:graphicImage library="imagens/menu"
-								style="width:30px; height:30px; 
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="palestras.png" /><a
-							href="../administrador/palestra.xhtml">Palestras</a>
-						</li>
-						<li><h:graphicImage library="imagens/menu"
-								style="width:30px; height:30px; 
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="equipes.png" /><a
-							href="../administrador/equipe.xhtml">Equipes</a>
-						</li>
-						<li><h:graphicImage library="imagens/menu"
-											style="width:30px; height:30px;
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="usuarios.png" /><a
-								href="usuario.xhtml">Usuários</a>
-						</li>
-					</ul>
-				</li>
-				-->
+				<li><a href="../publico/estatistica.xhtml">
+					<h:graphicImage library="imagens/menu"
+									style="width:35px; height:35px;" name="estatisticas.png" />Indicadores
+				</a></li>
+
 				<li><a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="montagem.png" />Montagem</a>
 					<ul>
