--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -28,6 +28,10 @@
 		<div id="menubar">
 			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="400" height="72" /></li>
 			<ul>
+				<li><a href="../publico/estatistica.xhtml">
+					<h:graphicImage library="imagens/menu"
+									style="width:35px; height:35px;" name="estatisticas.png" />Indicadores
+				</a></li>
 				<h:panelGroup rendered="#{contextoBean.usuarioLogado.perfil eq 'Administrador'}">
 					<li>
 						<a><h:graphicImage library="imagens/menu"
